# zentimer

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  USAGE.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
.github/workflows/: sync-to-gitee.yml
public/: floating.html
release-assets/: ZenTimer_1.0.0_x64-setup.exe.sig  latest.json
scripts/: generate-update-manifest.sh  generate_icons.py
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json  tauri.key.pub
src-tauri/capabilities/: default.json
src-tauri/icons/: build-ico.cjs  build-icons.py  convert-rgba.py  rasterize-icons.cjs  rasterize-icons.mjs
src-tauri/src/: commands.rs  lib.rs  main.rs
src/components/download/: DownloadPage.tsx
src/components/floating/: FloatingWindowButton.tsx
src/components/layout/: Header.tsx
src/components/settings/: SettingsPanel.tsx  Toggle.tsx  UpdateNotification.tsx  VolumeControl.tsx
src/components/timer/: BufferToast.tsx  CircularTimer.tsx  FixedTimeSlider.tsx  SessionStats.tsx  TimeSelector.tsx  TimerControls.tsx
src/hooks/: useFloatingWindow.tsx  useKeyboardShortcuts.ts  useUpdater.ts
src/i18n/: en.ts  useT.ts  zh.ts
src/store/: floatingStore.ts  settingsStore.ts  timerStore.ts  updaterStore.ts
src/types/: index.ts
src/utils/: audio.ts  random.ts  tauri.ts  time.ts
