[package]
name = "zentimer"
version = "1.1.9"
description = "ZenTimer — 禅意番茄钟"
authors = ["YIYI"]
edition = "2021"

[lib]
name = "zentimer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
# Used to set the floating window opacity on Windows (Tauri 2.11 lacks set_opacity)
windows = { version = "0.61", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation"] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
